# keyguard

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-05-keyguard-ci-integration.md  2026-04-05-keyguard-gcp-auditor.md
docs/superpowers/specs/: 2026-04-05-ci-integration-design.md  2026-04-05-gcp-auditor-design.md
keyguard/: cli.py  config.py  entropy.py  models.py  scan.py
keyguard/auditor/: audit.py  client.py  output.py
keyguard/ci/: circleci.py  github.py  gitlab.py  models.py  output.py  scan.py
keyguard/engine/: matcher.py  rules.py
keyguard/output/: structured.py  terminal.py  webhook.py
keyguard/rules/: google.toml
keyguard/scanner/: file.py  git.py
tests/: test_ci_circleci.py  test_ci_cli.py  test_ci_config.py  test_ci_github.py  test_ci_gitlab.py  test_ci_models.py  test_ci_output.py  test_ci_scan.py  test_cli.py  test_config.py  test_entropy.py  test_file_scanner.py  test_gcp_audit.py  test_gcp_cli.py  test_gcp_client.py  test_gcp_output.py  test_git_scanner.py  test_integration.py  test_matcher.py  test_models.py  test_rules.py  test_structured.py  test_terminal.py  test_webhook.py
tests/fixtures/: fp_google_api_key.py  tp_google_api_key.py  tp_service_account.json
