[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyguard"
version = "0.1.0"
description = "Scan codebases and git history for exposed credentials"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "gitpython>=3.1",
    "pathspec>=0.12",
    "watchdog>=4.0",
    "requests>=2.31",
]

[project.scripts]
keyguard = "keyguard.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
